# compa-ai

./: .env.example  .gitignore  README.md  lista.txt  pyproject.toml
gt_compare/: __init__.py  cache.py  cli.py  display.py  planner.py  relevance.py  scraper.py  stores.py  vtex.py  web.py
gt_compare/static/: index.html
