[project]
name = "gt-compare"
version = "0.1.0"
description = "Comparador de precios en tiendas VTEX de Guatemala"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.117.1",
    "httpx>=0.27",
    "rich>=13.0",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
web = [
    "uvicorn>=0.29",
]

[project.scripts]
gt-compare = "gt_compare.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gt_compare"]

[tool.vercel]
entrypoint = "gt_compare.web:app"
